--- a/app/src/main/res/layout/activity_edit_existing_test.xml
+++ b/app/src/main/res/layout/activity_edit_existing_test.xml
@@ -9,8 +9,8 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="792dp"
-        android:layout_height="946dp"
+        android:layout_width="781dp"
+        android:layout_height="1066dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -22,13 +22,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="5dp">
 
 
             <TextView
                 android:id="@+id/existing_test_title"
-                android:layout_width="363dp"
-                android:layout_height="60dp"
+                android:layout_width="445dp"
+                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="84dp"
@@ -36,7 +37,7 @@
                 android:fontFamily="@font/unica_one"
                 android:text="Test Title Goes Here"
                 android:textAlignment="center"
-                android:textSize="25dp"
+                android:textSize="40dp"
 
                 android:textStyle="bold" />
 
@@ -55,25 +56,26 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/existing_test_questions"
-                android:layout_width="801dp"
-                android:layout_height="630dp"
+                android:layout_width="768dp"
+                android:layout_height="583dp"
                 android:layout_below="@+id/existing_test_title"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="67dp"
 
                 android:layout_marginEnd="8dp"
                 android:background="@android:color/transparent" />
 
             <TextView
                 android:id="@+id/question_count_text"
-                android:layout_width="191dp"
-                android:layout_height="31dp"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
                 android:layout_below="@+id/existing_test_questions"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="86dp"
+                android:layout_marginTop="161dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="36dp"
-                android:text="Question Count" />
+                android:text="Question Count"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
 
         </RelativeLayout>
