--- a/app/src/main/res/menu/create_test_menu.xml
+++ b/app/src/main/res/menu/create_test_menu.xml
@@ -5,10 +5,10 @@
     <item
         android:id="@+id/return_to_dashboard"
         android:title="Dashboard"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/sign_out"
         android:title="Log Out"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 </menu>
