--- a/app/src/main/res/layout/activity_view_edit_tests.xml
+++ b/app/src/main/res/layout/activity_view_edit_tests.xml
@@ -11,8 +11,8 @@
         android:id="@+id/create_test_button"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="44dp"
         android:background="@android:color/transparent"
         android:padding="5dp"
         android:src="@drawable/circleplusicon"
@@ -32,29 +32,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="264dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginBottom="44dp"
         android:text="or View/Edit Tests Below"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/test_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toEndOf="@+id/create_test_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintStart_toEndOf="@+id/create_test_button" />
 
     <TextView
         android:id="@+id/content_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="58dp"
-        android:fontFamily="@font/unica_one"
+        android:layout_width="269dp"
+        android:layout_height="92dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/background_capsule"
+        android:fontFamily="@font/amaranth"
+        android:padding="15dp"
         android:text="Content Info goes here"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
+        android:textSize="23sp"
         app:layout_constraintBottom_toTopOf="@+id/standard_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -66,11 +65,36 @@
         android:layout_height="671dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="284dp"
+        android:layout_marginBottom="208dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/loading_message"
+        android:layout_width="312dp"
+        android:layout_height="55dp"
+        android:text="Grabbing Your Tests . . ."
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/test_recycler_view"
+        app:layout_constraintEnd_toEndOf="@+id/test_recycler_view"
+        app:layout_constraintStart_toStartOf="@+id/test_recycler_view"
+        app:layout_constraintTop_toTopOf="@+id/test_recycler_view" />
+
+    <ProgressBar
+        android:id="@+id/all_tests_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="200dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="312dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/test_recycler_view"
+        app:layout_constraintEnd_toEndOf="@+id/test_recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/loading_message"
+        app:layout_constraintVertical_bias="0.042" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
