--- a/app/src/main/res/layout/tests_row.xml
+++ b/app/src/main/res/layout/tests_row.xml
@@ -35,7 +35,7 @@
                 android:padding="8dp"
                 android:layout_margin="15dp"
                 android:text="Test Title: "
-                android:textSize="15sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -45,7 +45,8 @@
                 android:text="Date Created"
                 android:layout_margin="15dp"
                 android:padding="8dp"
-                android:textSize="10sp"
+                android:textSize="20sp"
+                android:textStyle="italic"
                 android:textColor="@android:color/darker_gray"
                 android:layout_below="@id/test_title"/>
 
