--- a/app/src/main/res/menu/create_question_menu.xml
+++ b/app/src/main/res/menu/create_question_menu.xml
@@ -5,15 +5,15 @@
     <item
         android:id="@+id/view_test"
         android:title="View Test"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/return_to_dashboard"
         android:title="Dashboard"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/sign_out"
         android:title="Log Out"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 </menu>
