--- a/app/src/main/res/menu/view_tests_menu.xml
+++ b/app/src/main/res/menu/view_tests_menu.xml
@@ -6,15 +6,15 @@
         android:id="@+id/new_test"
         android:icon="@drawable/plus_icon"
         android:title="New Test"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/return_to_dashboard"
         android:title="Dashboard"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/sign_out"
         android:title="Log Out"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never"/>
 </menu>
